# cmake

HELLO/: CMakeLists.txt  hello.c
HELLO_WTH_LIB/: CMakeLists.txt  hello_file.c
HELLO_WTH_LIB_TOGG/: CMakeLists.txt  hello.c  hello_file.h
HELLO_WTH_LIB_TOGG_CMD/: CMakeLists.txt  compile-help.txt
